--- a/SmartLiving/public/css/account.css
+++ b/SmartLiving/public/css/account.css
@@ -1,6 +1,9 @@
 .content-wrapper{
     max-width: 1100px;
 }
+.min-height {
+    min-height: 100vh;
+}
 
 /*   SEPARATOR LAVENDER */
 .separator-lavender-account{
