--- a/SmartLiving/templates/account/account.html.twig
+++ b/SmartLiving/templates/account/account.html.twig
@@ -90,7 +90,7 @@
                 </a>
 
                 {# Addresses #}
-                <a class="row no-gutters powder-blue-account-card  align-items-center mt-5 text-decoration-none">
+                <a href="{{ path('address_index') }}" class="row no-gutters powder-blue-account-card  align-items-center mt-5 text-decoration-none">
                     <img class="col-3 account-link-icon" src="{{ asset('images/icons/location-icon.svg') }} "
                          alt="location icon">
                     <div class="col-8 ml-3">
