--- a/SmartLiving/public/css/myOrders.css
+++ b/SmartLiving/public/css/myOrders.css
@@ -37,12 +37,21 @@
     color: #F1D23D;
 }
 
+.left-yellow-arrow-icon {
+    border: solid #F1D23D;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 5px;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
 
 .product-image-order{
-    max-width: 160px;
+    max-width: 120px;
     height: auto;
     border-radius: 20px;
     box-shadow: 0 3px 6px #00000029;
+    margin: 10px;
 }
 
 @media (max-width: 992px) {
