[Cart] Mise a jour et ajout du css

--- a/SmartLiving/templates/includes/navbar.html.twig
+++ b/SmartLiving/templates/includes/navbar.html.twig
@@ -69,7 +69,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link  navbar-icon" href="#"> <img src=" {{ asset('images/icons/cart-black.svg')}} " alt="panier"> </a>
+                    <a class="nav-link  navbar-icon" href="{{ path("cart_index") }}"> <img src=" {{ asset('images/icons/cart-black.svg')}} " alt="panier"> </a>
                 </li>
             </ul>
         </div>
