--- a/SmartLiving/templates/cart/index.html.twig
+++ b/SmartLiving/templates/cart/index.html.twig
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block body %}
-    {% if false %}
+     {% if is_mobile() == true %}
 
          <div class="cart-main">
             <p class="cart-primary-text text-center">Mon Panier</p>
@@ -62,7 +62,7 @@
                     {% for item in items %}
                         <div class="row">
                             <div class="col-2 justify-content-center">
-                                <img class="cart-image-product" src={{ asset('images/products/ps4-mobile-promo.png') }} alt="">
+                                <img class="cart-image-product" src={{ asset(item.product.photo) }} alt="">
                             </div>
                             <div class="col-8">
                                 <p class="cart-text">{{ item.product.title }}<p>
