--- a/SmartLiving/templates/base.html.twig
+++ b/SmartLiving/templates/base.html.twig
@@ -27,7 +27,12 @@
     {% block body %}
 
     {% endblock %}
+
+    {% block footer %}
+        {% include ('includes/footer.html.twig') %}
+    {% endblock %}
 </div>
+
 
 
 {% block javascripts %}
