--- a/SmartLiving/templates/address/index.html.twig
+++ b/SmartLiving/templates/address/index.html.twig
@@ -2,44 +2,37 @@
 
 {% block title %}Address index{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/account.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/address.css') }}">
+{% endblock %}
+
 {% block body %}
-    <h1>Address index</h1>
+    <div class="content-wrapper mx-auto mt-5">
+        <section class="row mt-5  no-gutters  justify-content-center">
+            <div class="col-11 col-lg-12 no-gutters">
+                <h1 class="title-h1-midnight-blue">Mes adresses</h1>
+                <p class="title-h4-black text-left"><i class="left-yellow-arrow-icon"></i><a class="title-h4-black text-left back-account-link" href="{{ path('app_account') }}">Mon Compte</a>
+            </div>
+        </section>
+    </div>
+    <div class="row mt-5  no-gutters lavender-border-order justify-content-center">
+    {% for address in app.user.customer.addresses %}
+        <div class="col-lg-4 m-3 address-card card">
+            <div class="card-body">
+                <h5 class="card-title">{{ address.fullName }}</h5>
+                <p class="card-text">{{ address.isDefault ? 'Adresse de livraison' : '<br>' }}</p>
+                <p>{{ address.address }}<br>{{ address.zipCode }}<br>{{ address.city }}<br>{{ address.country }}</p>
+                <a href="{{ path('address_edit', {'id': address.id}) }}" class="btn address-card-button w-100 mx-auto my-2">Modifier</a>
+                <a href="{{ path('address_delete', {'id': address.id}) }}" class="btn address-card-button w-100 mx-auto my-2">Effacer</a>
+            </div>
+        </div>
+    {% endfor %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Address</th>
-                <th>ZipCode</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>FullName</th>
-                <th>IsDefault</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for address in app.user.customer.addresses %}
-            <tr>
-                <td>{{ address.id }}</td>
-                <td>{{ address.address }}</td>
-                <td>{{ address.zipCode }}</td>
-                <td>{{ address.city }}</td>
-                <td>{{ address.country }}</td>
-                <td>{{ address.fullName }}</td>
-                <td>{{ address.isDefault ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('address_show', {'id': address.id}) }}">show</a>
-                    <a href="{{ path('address_edit', {'id': address.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    </div>
+    <div class="row m-5">
+        <a class="col-lg-3 btn lavender-add-button mx-auto" href="{{ path('address_new') }}">Ajouter une adresse</a>
+    </div>
 
-    <a href="{{ path('address_new') }}">Create new</a>
 {% endblock %}
