--- a/SmartLiving/templates/address/new.html.twig
+++ b/SmartLiving/templates/address/new.html.twig
@@ -1,11 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Address{% endblock %}
+{% block title %}Ajouter une adresse{% endblock %}
+    {% block stylesheets %}
+        {{ parent() }}
+        <!-- CUSTOM CSS -->
+        <link rel="stylesheet" href="{{ asset('css/modal.css') }}">
+    {% endblock %}
 
 {% block body %}
-    <h1>Create new Address</h1>
+    <div class="main-content-wrapper row">
+        <div class="d-flex flex-column form-wrapper my-auto mx-auto col-10 lg-6 pl-0 pr-0">
+            <div class="account-detail-block">
+                <a href="{{ path('app_account') }}" class="close"></a>
+                <h1 class="title-h4-black margin-top-18px p-0">Ajouter une adresse</h1>
+                <div class="separator-login-title"></div>
 
-    {{ include('address/_form.html.twig') }}
+                {{ include('address/_form.html.twig') }}
 
-    <a href="{{ path('address_index') }}">back to list</a>
+            </div>
+
+        </div>
+    </div>
 {% endblock %}
+
+
