--- a/SmartLiving/templates/address/_delete_form.html.twig
+++ b/SmartLiving/templates/address/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('address_delete', {'id': address.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ address.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn address-card-button w-100 mx-auto my-2">Effacer</button>
 </form>
