--- a/SmartLiving/templates/credit_card/edit.html.twig
+++ b/SmartLiving/templates/credit_card/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Address{% endblock %}
+{% block title %}Edit CreditCard{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     <!-- CUSTOM CSS -->
@@ -12,10 +12,10 @@
     <div class="d-flex flex-column form-wrapper my-auto mx-auto col-10 lg-6 pl-0 pr-0">
         <div class="account-detail-block">
             <a href="{{ path('app_account') }}" class="close"></a>
-            <h1 class="title-h4-black margin-top-18px p-0">Modifier une adresse</h1>
+            <h1 class="title-h4-black margin-top-18px p-0">Modifier une carte de crédit</h1>
             <div class="separator-login-title"></div>
 
-    {{ include('address/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
+    {{ include('credit_card/_form.html.twig', {'button_label': 'Enregistrer les modifications'}) }}
 
         </div>
 
