suppression de methods delete et update du CRUD dans le ProductController

--- a/SmartLiving/public/css/Product/product_show.css
+++ b/SmartLiving/public/css/Product/product_show.css
@@ -1,3 +1,11 @@
+/* limit the size of the main content*/
+
+.product-wrapper{
+    max-width: 1100px;
+    background-color: yellow;
+}
+
+
 .article-title
 {
     font: normal normal bold 20px/24px Lato;
