--- a/SmartLiving/templates/base.html.twig
+++ b/SmartLiving/templates/base.html.twig
@@ -6,10 +6,11 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
 
         {% block stylesheets %}
-        <!-- CSS BOOTSTRAP, GOOGLE FONTS, CUSTOM CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+        <!-- CSS BOOTSTRAP, GOOGLE FONTS, CUSTOM CSS, FONT AWESOME -->
+            <script src="https://kit.fontawesome.com/8665f855bb.js" crossorigin="anonymous"></script>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+            <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 
         {% endblock %}
     </head>
