--- a/SmartLiving/templates/product/show.html.twig
+++ b/SmartLiving/templates/product/show.html.twig
@@ -20,7 +20,7 @@
                         </ol>
                         <div class="carousel-inner d-flex">
                             <div class="carousel-item active v-w-100">
-                                <img src="{{ asset('images/placeholder.png') }}" class="d-block w-75 w-md-25 mx-auto" alt="...">
+                                <img src="{{ asset(product.photo) }}" class="d-block w-75 w-md-25 mx-auto" alt="...">
                                 <div class="row mx-0 my-4">
                                     <div class="col-8  d-flex justify-content-around details-block">
                                         <div class="p-1 py-4">
