--- a/SmartLiving/public/css/style.css
+++ b/SmartLiving/public/css/style.css
@@ -25,6 +25,32 @@
 .login-menu.dropdown-toggle::after {
     content: none;
 }
+.navbar-nav .nav-item .nav-link{
+    font-family: 'Lato', sans-serif;
+    color: #1E255C;
+    font-weight: bold;
+}
+.navbar-nav .nav-item .nav-link:hover{
+    color: #F1D23D;
+}
+.navbar-nav .nav-item .nav-link.active{
+    color: #F1D23D;
+}
+.navbar-nav .nav-item .dropdown-menu .dropdown-toggle::after{
+    color: #F1D23D;
+}
+.dropdown-item:focus {
+    background:none;
+}
+@media (max-width: 1200px) {
+    .navbar-nav .nav-item .nav-link{
+        font-size: smaller;
+    }
+}
+
+.category-card {
+    max-width: 375px;
+}
 /* ---------     Titles    ------------ */
 /*TODO: Use same class for titles on all pages*/
 
