--- a/SmartLiving/templates/category/index.html.twig
+++ b/SmartLiving/templates/category/index.html.twig
@@ -1,6 +1,6 @@
 <ul class="dropdown-menu">
     {% for category in categories %}
-        {% if category.parent == false %}
+        {% if category.children|length > 0 %}
             <li><a class="dropdown-item dropdown-toggle" href="{{ path('category_show', {'id': category.id}) }}">{{ category.name }}</a>
                 <ul class="submenu dropdown-menu">
                     {% for subCategory in category.children%}
@@ -8,6 +8,9 @@
                     {% endfor %}
                 </ul>
             </li>
+        {% endif %}
+        {% if (category.parent|length == 0) and (category.children|length == 0) %}
+            <li><a class="dropdown-item" href="{{ path('category_show', {'id': category.id}) }}">{{ category.name }}</a></li>
         {% endif %}
     {% endfor %}
 </ul>
