--- a/SmartLiving/templates/category/show.html.twig
+++ b/SmartLiving/templates/category/show.html.twig
@@ -15,15 +15,17 @@
         </div>
     </section>
 </div>
-<div class="row mt-5  no-gutters lavender-border-order justify-content-center">
+<div class="row mt-5 mx-5 no-gutters lavender-border-order justify-content-center">
     {% if subCategories %}
         {% for subCat in subCategories %}
             {% for product in subCat.products %}
-                <div class="col-lg-4 col-sm-6 card border-0">
+                <div class="col-sm-6 col-lg-4 category-card card border-0">
                     <div class="card-body">
-                        <img src="{{ asset(product.photo) }}"
-                             class="d-block w-100 w-md-100 mx-auto rounded mb-3" alt="...">
-                        <div class="row product-infos d-flex">
+                        <a href="{{ path('product_show', {'id': product.id}) }}">
+                            <img src="{{ asset(product.photo) }}"
+                                 class="rounded w-100 w-md-100 mb-3" alt="...">
+                        </a>
+                        <div class="row product-infos d-flex justify-content-between">
                             <div class="col-6">
                                 <p class="product-title ">{{ product.title }}</p>
                             </div>
@@ -45,10 +47,8 @@
                             <div class="col-5">
                                 <p class="product-price text-right">{{ product.unitPrice }}</p>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <button type="button" class="btn btn-primary mt-2">Ajouter au panier<img
+                            <div class="col-12 ">
+                                <button type="button" class="btn btn-primary w-100 mt-2">Ajouter au panier<img
                                             src="{{ asset('images/icons/cart_icon.svg') }}" class="cart-icon">
                                 </button>
                             </div>
@@ -59,11 +59,13 @@
         {% endfor %}
         {% else %}
             {% for product in products %}
-                <div class="col-lg-4 card border-0">
-                    <div class="card-body ">
-                        <img src="{{ asset(product.photo) }}"
-                             class="d-block w-100 w-md-100 mx-auto rounded mb-3" alt="...">
-                        <div class="row product-infos d-flex ">
+                <div class="col-sm-6 col-lg-4 category-card card border-0">
+                    <div class="card-body">
+                        <a href="{{ path('product_show', {'id': product.id}) }}">
+                            <img src="{{ asset(product.photo) }}"
+                                 class="rounded w-100 w-md-100 mb-3" alt="...">
+                        </a>
+                        <div class="row product-infos d-flex justify-content-between">
                             <div class="col-6">
                                 <p class="product-title ">{{ product.title }}</p>
                             </div>
@@ -80,16 +82,14 @@
                                      class="rating-stars">
                             </div>
                             <div class="col-7">
-                                <p class="product-category">{{ category.name }}</p>
+                                <p class="product-category ">{{ product.category.name }}</p>
                             </div>
                             <div class="col-5">
                                 <p class="product-price text-right">{{ product.unitPrice }}</p>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-12 d-flex justify-content-center">
-                                <button type="button" class="btn btn-primary mt-2">Ajouter au panier
-                                    <img src="{{ asset('images/icons/cart_icon.svg') }}" class="cart-icon">
+                            <div class="col-12 ">
+                                <button type="button" class="btn btn-primary w-100 mt-2">Ajouter au panier<img
+                                            src="{{ asset('images/icons/cart_icon.svg') }}" class="cart-icon">
                                 </button>
                             </div>
                         </div>
