create carousel desktop

--- a/SmartLiving/public/css/myOrders.css
+++ b/SmartLiving/public/css/myOrders.css
@@ -69,7 +69,7 @@
 
 /*---------------- BUTTONS -------------------*/
 
-/*  Retourner BUTTON*/
+/*  Return BUTTON*/
 
 .lavender-outline-return-button{
     height:40px;
