--- a/SmartLiving/templates/product/index.html.twig
+++ b/SmartLiving/templates/product/index.html.twig
@@ -505,14 +505,14 @@
                             <a class=" carousel-control-next d-none d-md-flex" href="#carouselExampleIndicators"
                                role="button"
                                data-slide="next">
-                                <img src="{{ asset('images/icons/arrow_next.svg') }}" aria-hidden="true">
+                                <img src="{{ asset('images/icons/arrow-right.svg') }}" aria-hidden="true">
                                 <span class="sr-only">Next</span>
                             </a>
 
                             <a class=" carousel-control-prev d-none d-md-flex" href="#carouselExampleIndicators"
                                role="button"
                                data-slide="prev">
-                                <img src="{{ asset('images/icons/arrow_prev.svg') }}" aria-hidden="true">
+                                <img src="{{ asset('images/icons/arrow-left.svg') }}" aria-hidden="true">
                                 <span class="sr-only">Previous</span>
                             </a>
 
@@ -619,11 +619,11 @@
             {# </div> #}
 
             {# <a class="carousel-control-prev justify-content-start pr-5" href="#carouselExampleIndicators" role="button" data-slide="prev"> #}
-            {# <img src="{{ asset('images/icons/arrow_prev.svg') }}" aria-hidden="true"> #}
+            {# <img src="{{ asset('images/icons/arrow-left.svg') }}" aria-hidden="true"> #}
             {# <span class="sr-only">Previous</span> #}
             {# </a> #}
             {# <a class="carousel-control-next justify-content-end pl-5" href="#carouselExampleIndicators" role="button" data-slide="next"> #}
-            {# <img src="{{ asset('images/icons/arrow_next.svg') }}" aria-hidden="true"> #}
+            {# <img src="{{ asset('images/icons/arrow-right.svg') }}" aria-hidden="true"> #}
             {# <span class="sr-only">Next</span> #}
             {# </a> #}
             {# #}
