--- a/SmartLiving/public/css/Product/homepage.css
+++ b/SmartLiving/public/css/Product/homepage.css
@@ -6,47 +6,83 @@
     justify-content: center;
 }
 
-.carousel{
-    width: 900px;
-    overflow: hidden;
-    flex-shrink: 0;
-}
-
 .slider {
     height: 100%;
     display: flex;
     transition: all 0.3s;
 }
+.carousel{
+    overflow: hidden;
+    flex-shrink: 0;
 
-
-/* PRODUCT CARD*/
+    width: 300px;
+}
 .product-card{
     box-sizing: border-box;
     padding: 10px;
-    width: 300px;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+    justify-content: space-between;
+
+    width: 300px;
+}
+
+@media (min-width: 410px){
+    .carousel {
+        width: 400px;
+    }
+    .product-card{
+        width: 400px;
+    }
+}
+
+@media (min-width: 701px){
+    .carousel {
+        width: 600px;
+    }
+    .product-card{
+        width: 300px;
+    }
+}
+
+@media (min-width: 1100px){
+    .carousel{
+        width: 900px;
+    }
+    /* PRODUCT CARD*/
+    .product-card{
+        width: 300px;
+    }
+}
+
+@media (min-width: 1300px){
+    .carousel {
+        width: 1200px;
+    }
+    .product-card{
+        width: 400px;
+    }
 }
 .product-image{
     width:100%;
     height: auto;
     border-radius: 10px;
 }
-.product-info{
-    display: flex;
-    flex-wrap: wrap;
-}
 .info-detail{
-    width: 50%;
-    flex-shrink: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .review-detail{
     display: flex;
     justify-content: flex-end;
 }
 .review-star{
-    width: 18%;
+    width: 20px;
+    height: 20px;
     margin-left: 1%;
 }
 
@@ -89,5 +125,193 @@
 }
 
 
+
+
+
+/*  ------   PROMO  ------  */
+.limited-offer-wrapper {
+    display: flex;
+}
+
+.price-wrapper{
+    display: flex;
+}
+.limited-offer-label{
+    background-color: #CCCCF3;
+    border-radius: 10px;
+    min-height: 30px;
+    max-width: 180px;
+}
+.old-price{
+    font: normal normal normal 22px Lato;
+    letter-spacing: 0;
+    color: #1E255C;
+}
+.new-price{
+    text-align: left;
+    font: normal normal normal 22px Lato;
+    letter-spacing: 0;
+    color: #B2B2B2;
+    text-decoration:line-through;
+}
+
+@media(max-width: 991px) {
+    .limited-offer-wrapper {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+    }
+    .limited-offer-info-wrapper{
+        width: 80%;
+
+    }
+    .promo-image{
+        width: 100%;
+    }
+
+    .price-wrapper{
+        justify-content: center;
+    }
+}
+
+@media (min-width: 992px) {
+    .promo-image{
+        display: none;
+    }
+    .limited-offer-wrapper {
+        max-width: 1310px;
+        overflow: hidden;
+        height: 700px;
+        background-image: url("../../images/products/ps.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+    }
+    .limited-offer-wrapper {
+        justify-content: flex-end;
+    }
+
+    .limited-offer-info-wrapper{
+        width: 25%;
+        margin-top: 10%;
+        margin-right: 10%;
+    }
+}
+@media (min-width: 1134px) {
+    .limited-offer-wrapper {
+        height: 800px;
+    }
+}
+
+@media (min-width: 1290px) {
+    .limited-offer-wrapper {
+        height: 900px;
+    }
+}
+
+
+/*    --------------- Three sections : New arrivals ... -----------------  */
+
+.three-section-product-mini-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.section-product-mini{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.section-product-mini-title{
+    margin: 10px;
+    text-align: left;
+    font: normal normal bold 30px Roboto;
+    letter-spacing: 0;
+    color: #1E255C;
+}
+.product-mini-card-wrapper{
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #BBE4E4;
+    padding-bottom: 20px;
+}
+.product-mini-image{
+    width: 100px;
+    height: auto;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 20px;
+
+
+}
+.product-mini-info-wrapper{
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.product-mini-title{
+    text-align: left;
+    font: normal normal normal 20px Lato;
+    letter-spacing: 0;
+    color: #1E255C;
+}
+.product-mini-price{
+    text-align: left;
+    font: normal normal normal 25px Lato;
+    letter-spacing: 0;
+    color: #F1D23D;
+}
+.product-mini-section-see-more{
+    text-align: left;
+    font: normal normal normal 25px Lato;
+    letter-spacing: 0;
+    color: #1E255C;
+    margin-left: 10px;
+}
+.product-mini-section-see-more:hover, .product-mini-section-see-more:active, .product-mini-section-see-more:focus{
+    color: #F1D23D;
+}
+.product-mini-section-see-more:hover  > i, .product-mini-section-see-more:active  > i, .product-mini-section-see-more:focus > i{
+    border: solid #F1D23D;
+    border-width: 0 2px 2px 0;
+
+}
+.right-blue-arrow-icon {
+    border: solid #1E255C;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 4px;
+    margin-bottom: 2px; !important;
+
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+@media (max-width: 991px) {
+    .section-product-mini{
+        align-self: center;
+        justify-content: center;
+
+    }
+    .section-product-mini-title{
+        text-align: center;
+    }
+}
+@media (max-width: 400px) {
+    .section-product-mini{
+width:90%;
+    }
+}
+
+@media (min-width: 992px) {
+    .three-section-product-mini-wrapper {
+        flex-direction: row;
+    }
+    .section-product-mini{
+        display: flex;
+        flex-direction: column;
+    }
+}
 
 
