--- a/SmartLiving/public/css/Product/product_show.css
+++ b/SmartLiving/public/css/Product/product_show.css
@@ -1,6 +1,153 @@
 /* limit the size of the main content*/
-
 .product-wrapper{
+    max-width: 1100px;
+    background-color: yellow;
+}
+
+
+.article-title
+{
+    font: normal normal bold 20px/24px Lato;
+    letter-spacing: 0px;
+    color: #1E255C;
+    opacity: 1;
+}
+
+.username
+{
+    text-align: left;
+    font: normal normal normal 18px/22px Lato;
+    letter-spacing: 0px;
+    color: #1E255C;
+    opacity: 1;
+}
+
+.date
+{
+    text-align: left;
+    font: normal normal normal 14px/17px Lato;
+    letter-spacing: 0px;
+    color: #C4C3CB;
+    opacity: 1;
+}
+
+.text-show
+{
+    text-align: center;
+    font: normal normal normal 16px/19px Lato;
+    letter-spacing: 0px;
+    color: #1E255C;
+    opacity: 1;
+}
+
+textarea
+{
+    resize: none;
+}
+
+.details-block
+{
+    border: 3px solid #CDCCF7;
+    border-radius: 10px;
+    min-width: 231px;
+    max-width: 1280px;
+}
+.reviews {
+    max-width: 1400px;
+}
+.list-group-item {
+    border: none;
+}
+.quantity-selector
+{
+    height: 25px;
+    width: 60px;
+}
+.img-product-details {
+    max-width: 500px;
+    height: auto;
+}
+.miniature-img-product {
+    max-width: 108px;
+    height: auto;
+}
+.title-show
+{
+    text-align: center;
+    font: normal normal bold 24px/28px Roboto;
+    letter-spacing: 0px;
+    color: #1E255C;
+    opacity: 1;
+}
+
+/* test du star rating */
+
+/*.star-rating-js {*/
+/*    line-height:32px;*/
+/*    font-size:1.25em;*/
+/*}*/
+
+/*.star-rating-js .fa-star{color: yellow;}*/
+
+@media only screen and (min-width: 993px) {
+    .form-show
+    {
+        top: 1870px;
+        left: 38px;
+        width: 80%;
+        height: 587px;
+    }
+
+    .form-border
+    {
+        border: 2px solid #B1E6E5;
+        border-radius: 10px;
+        opacity: 1;
+    }
+
+    .btn-addtocart
+    {
+        alignment: left;
+        width: 50%;
+    }
+
+    .btn-primary {
+        background-color: #BBE4E4;
+        border: 0;
+        color: black;
+        border-radius: 8px 8px 8px 8px;
+        height: 43px;
+        font-family: 'Lato', sans-serif;
+        font-size: 13px;
+    }
+
+    .btn-primary:hover {
+        background-color: #F1D23D!important;
+        color: black;
+    }
+
+    .btn-primary:active {
+        background-color: #F1D23D!important;
+        color: black;
+    }
+}
+@media only screen and (max-width: 992px) {
+    .form-show
+    {
+        top: 1870px;
+        left: 38px;
+        width: 70%;
+        height: 587px;
+    }
+
+    .form-border
+    {
+        border: 2px solid #B1E6E5;
+        border-radius: 10px;
+        opacity: 1;
+    }
+}
+/*.product-wrapper{
     max-width: 1100px;
     background-color: yellow;
 }
@@ -87,7 +234,7 @@ textarea
     opacity: 1;
 }
 
-/* test du star rating */
+ test du star rating */
 
 /*.star-rating-js {*/
 /*    line-height:32px;*/
