--- a/SmartLiving/templates/category/show.html.twig
+++ b/SmartLiving/templates/category/show.html.twig
@@ -15,7 +15,7 @@
         </div>
     </section>
 </div>
-<div class="row mt-5 mx-5 no-gutters lavender-border-order justify-content-center">
+<div class="row mt-5 category-products mx-auto no-gutters lavender-border-order justify-content-center">
     {% if subCategories %}
         {% for subCat in subCategories %}
             {% for product in subCat.products %}
